--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,6 @@
 <h4>All Questions:</h4>
-<p>greferskjbfk nbfksfberk f kerfb dkbfkb kbfekb fberbfk bf e f kef fre frekfbrk ebkbkbmbkb. FDSGEH fgesk gjbsggjkfds gfsaj</p>
-<p>greferskjbfk nbfksfberk f kerfb dkbfkb kbfekb fberbfk bf e f kef fre frekfbrk ebkbkbmbkb. FDSGEH fgesk gjbsggjkfds gfsaj</p>
-<p>greferskjbfk nbfksfberk f kerfb dkbfkb kbfekb fberbfk bf e f kef fre frekfbrk ebkbkbmbkb. FDSGEH fgesk gjbsggjkfds gfsaj</p>
-<p>greferskjbfk nbfksfberk f kerfb dkbfkb kbfekb fberbfk bf e f kef fre frekfbrk ebkbkbmbkb. FDSGEH fgesk gjbsggjkfds gfsaj</p>
+<ul>
+  {{#each model as |question|}}
+    {{question-tile question=question}}
+  {{/each}}
+</ul>
