create ate and link-to a 'question' page for displaying individual questions (and eventually answers)

--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,5 +1,7 @@
 <li>
-  <h3>{{question.author}}</h3>
-  <h4>{{question.content}}</h4>
-  <p><em>Notes: {{question.notes}}</em></p>
+  {{#link-to 'question' question.id}}
+    <h3>{{question.author}}</h3>
+    <h4>{{question.content}}</h4>
+    <p><em>Notes: {{question.notes}}</em></p>
+  {{/link-to}}
 </li>
