--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,4 +1,7 @@
-<h2>Heading of Question</h2>
+<h2>Q: {{model.content}}</h2>
+<h4>By: {{model.author}}</h4>
+<p><em>Notes: {{model.notes}}</em></p>
 
-<p>greferskjbfk nbfksfberk f kerfb dkbfkb kbfekb fberbfk bf e f kef fre frekfbrk ebkbkbmbkb. FDSGEH fgesk gjbsggjkfds gfsaj</p>
-<p>greferskjbfk nbfksfberk f kerfb dkbfkb kbfekb fberbfk bf e f kef fre frekfbrk ebkbkbmbkb. FDSGEH fgesk gjbsggjkfds gfsaj</p>
+{{#link-to 'index'}}
+  <p>Home</p>
+{{/link-to}}
