install bootstrap and add columns to make sure it works

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,6 @@
 {{question-form-tile saveQuestion="saveQuestion"}}
 <h4>All Questions:</h4>
-<ul>
+<ul class="row">
   {{#each model as |question|}}
     {{question-tile question=question}}
   {{/each}}
