--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,19 @@
 <div class="container">
   <header>
-    <h1>The Answer</h1>
+    <div class="jumbotron">
+      <h1>The Answer</h1>
+      <h4>Alan Iverson-Level Answers</h4>
+      <div class="row">
+        <div class="col-xs-6">
+          {{#link-to 'index'}}
+          <button class="btn btn-default">Home</button>
+          {{/link-to}}
+        </div>
+        <div class="col-xs-6">
+          {{question-form-tile saveQuestion="saveQuestion"}}
+        </div>
+      </div>
+    </div>
   </header>
   {{outlet}}
 </div>
