--- a/app/templates/components/question-form-tile.hbs
+++ b/app/templates/components/question-form-tile.hbs
@@ -1,22 +1,22 @@
 {{#if isFormShowing }}
-  <h4>Question Form</h4>
+  <h4 {{action 'hideQuestionForm'}}>Question Form</h4>
   <div>
     <form>
       <div class="form-group">
-        <label for="author">Author</label>
+        <label for="author">Author</label><br>
         {{input value=author id="author"}}
       </div>
       <div class="form-group">
-        <label for="content">Question</label>
-        {{input value=content id="content"}}
+        <label for="content">Question</label><br>
+        {{textarea value=content id="content"}}
       </div>
       <div class="form-group">
-        <label for="notes">Notes</label>
-        {{input value=notes id="notes"}}
+        <label for="notes">Notes</label><br>
+        {{textarea value=notes id="notes"}}
       </div>
-      <button {{action 'saveQuestion'}}>Ask!</button>
+      <button class="btn btn-success" {{action 'saveQuestion'}}>Ask!</button>
     </form>
   </div>
 {{else}}
-  <button {{action 'showQuestionForm'}}>Ask a Question</button>
+  <button class="btn btn-info form-trigger" {{action 'showQuestionForm'}}>Ask a Question</button>
 {{/if}}
