--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,9 +1,7 @@
-<div  class="col-sm-6">
-  <li>
-    {{#link-to 'question' question.id}}
+{{#link-to 'question' question.id}}
+  <div class="col-sm-12 question-column">
     <h3>{{question.author}}</h3>
     <h4>{{question.content}}</h4>
     <p><em>Notes: {{question.notes}}</em></p>
-    {{/link-to}}
-  </li>
-</div>
+  </div>
+{{/link-to}}
