--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,7 +1,7 @@
-{{question-form-tile saveQuestion="saveQuestion"}}
+<!-- {{question-form-tile saveQuestion="saveQuestion"}} -->
 <h4>All Questions:</h4>
-<ul class="row">
+<div class="row questions-row">
   {{#each model as |question|}}
     {{question-tile question=question}}
   {{/each}}
-</ul>
+</div>
