--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,7 +1,5 @@
-<h2>Q: {{model.content}}</h2>
-<h4>By: {{model.author}}</h4>
-<p><em>Notes: {{model.notes}}</em></p>
-
-{{#link-to 'index'}}
-  <p>Home</p>
-{{/link-to}}
+<div class="col-sm-12 question-display">
+  <h2>Q: {{model.content}}</h2>
+  <h4>By: {{model.author}}</h4>
+  <p><em>Notes: {{model.notes}}</em></p>
+</div>
