--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,7 +1,6 @@
 {{#link-to 'question' question.id}}
   <div class="col-sm-12 question-column">
-    <h3>{{question.author}}</h3>
-    <h4>{{question.content}}</h4>
-    <p><em>Notes: {{question.notes}}</em></p>
+    <h2>Q: {{question.content}}</h2>
+    <h4>By: {{question.author}}</h4>
   </div>
 {{/link-to}}
