--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -2,4 +2,8 @@
   <h2>Q: {{model.content}}</h2>
   <h4>By: {{model.author}}</h4>
   <p><em>Notes: {{model.notes}}</em></p>
-</div>
+</div><br>
+{{new-answer saveAnswer="saveAnswer" question=model}}<br><br>
+{{#each model.answers as |answer|}}
+  {{answer-tile answer=answer}}
+{{/each}}
