--- a/app/templates/components/question-form-tile.hbs
+++ b/app/templates/components/question-form-tile.hbs
@@ -1,5 +1,5 @@
 {{#if isFormShowing }}
-  <h4 {{action 'hideQuestionForm'}}>Question Form</h4>
+  <h4 id="question-form-heading"{{action 'hideQuestionForm'}}>Question Form</h4>
   <div>
     <form>
       <div class="form-group">
@@ -18,5 +18,5 @@
     </form>
   </div>
 {{else}}
-  <button class="btn btn-info form-trigger" {{action 'showQuestionForm'}}>Ask a Question</button>
+  <button class="btn btn-default form-trigger" {{action 'showQuestionForm'}}>Ask a Question</button>
 {{/if}}
