--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,8 +1,13 @@
 $navyish-blue : #265299;
 $grey : #aaa;
 
+body {
+  background-color: $grey !important;
+}
+
 .container {
   background-color: $grey;
+  margin-bottom: 20px;
 }
 .jumbotron {
   text-align: center;
@@ -97,7 +102,7 @@ a:hover {
 }
 
 #notes {
-  height: 50px;
+  height: 100px;
 }
 
 #content, #author, #notes {
@@ -116,4 +121,9 @@ a:hover {
   cursor: pointer;
   color: #000;
   background-color: #fff;
+}
+
+input, textarea {
+  color: #000;
+  padding: 2%;
 }
