--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -3,6 +3,7 @@
   <h4>By: {{model.author}}</h4>
   <p><em>Notes: {{model.notes}}</em></p>
 </div><br>
+{{update-question question=model update="update"}}
 {{new-answer saveAnswer="saveAnswer" question=model}}<br><br>
 {{#each model.answers as |answer|}}
   {{answer-tile answer=answer}}
